--- a/style.css
+++ b/style.css
@@ -92,11 +92,14 @@ h2 {
 }
 
 .nav-link, .mobile {
-    color: orangered;
+    display: flex;
+    align-items: center;
+    color: rgb(7, 2, 0);
     margin-left: 10px;
     text-decoration: none;
     margin-right: 30px;
     font-size: 25px;
+    justify-content: center;
 }
 
 .nav-link:hover {
@@ -400,10 +403,9 @@ h2 {
     .mobile {
         display: flex;
         align-items: center;
-        align-text: center;
-        justify-content: center;
+        justify-content: center; /* Center the content horizontally */
+        text-align: center; /* Center text within the flex container */
         color: black;
-
     }
 }
 
